--- a/frontend/categorize_images.html
+++ b/frontend/categorize_images.html
@@ -260,5 +260,459 @@
                 });
             }
     </script>
+
+
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>View/Edit Images Details</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        h1 {
+            margin-bottom: 20px;
+        }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+            gap: 20px;
+        }
+        .image-container img {
+            max-width: 40%;
+            height: auto;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+        .form-container {
+            width: 500px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+            display: none;
+            flex-direction: column;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+        label {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+        input[type="text"],
+        input[type="number"],
+        textarea,
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        textarea {
+            resize: vertical;
+        }
+        button {
+            background-color: #551A8B;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 10px;
+        }
+        button:hover {
+            background-color: #440077;
+        }
+        .home-button {
+            display: block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #f0f0f0;
+            color: #333;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            text-decoration: none;
+            text-align: center;
+            width: 100px;
+        }
+        .home-button:hover {
+            background-color: #e0e0e0;
+        }
+        #message-container {
+            margin-top: 20px;
+            color: green;
+            font-weight: bold;
+        }
+        .error-message {
+            color: red;
+            margin-top: 10px;
+        }
+
+        .data-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        .data-table th,
+        .data-table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        .data-table th {
+            background-color: #f0f0f0;
+        }
+        .data-table tbody tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+        .edit-button {
+            background-color: #007bff;
+            color: white;
+            padding: 5px 10px;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 12px;
+            margin-right: 5px;
+        }
+        .edit-button:hover {
+            background-color: #0056b3;
+        }
+        .editable {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 8px;
+            border-radius: 4px;
+            box-sizing: border-box;
+            width: 100%;
+        }
+        .editable:focus {
+            outline: none;
+            border-color: #007bff;
+            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.1);
+        }
+    </style>
+</head>
+<body>
+    <h1>View/Edit Images Details</h1>
+    <div class="disease-selection">
+        <label for="selectedDisease">Select Disease:</label>
+        <select id="selectedDisease" name="selectedDisease">
+            <option value="">-- Select a Disease --</option>
+        </select>
+        <button id="viewImagesButton">View Images</button>
+    </div>
+
+    <div class="image-container" style="display: none;">
+        <div style="text-align: center;">
+            <img id="targetImage" src="" alt="Original Image">
+            <p>Original Image</p>
+        </div>
+        <div style="text-align: center;">
+            <img id="maskImage" src="" alt="Mask Image">
+            <p>Mask Image</p>
+        </div>
+    </div>
+
+    <div class="form-container" style="display: none;">
+        <form id="imageDetailsForm">
+            <input type="hidden" id="imageId" name="imageId">
+            <div><label for="doctor_name">Doctor's Name:</label><input type="text" id="doctor_name" name="doctor_name" required class="editable"></div>
+            <div><label for="rating">Rating (1-5):</label><input type="number" id="rating" name="rating" min="1" max="5" required class="editable"></div>
+            <div><label for="comments">Comments (Original Image):</label><textarea id="comments" name="comments" class="editable"></textarea></div>
+            <div><label for="mask_comments">Comments (Mask Image):</label><textarea id="mask_comments" name="mask_comments" class="editable"></textarea></div>
+            <div><label for="disease_name">Disease Name:</label><input type="text" id="disease_name" name="disease_name" required class="editable"></div>
+            <div><label for="category">Category:</label><select id="category" name="category" class="editable"><option value="disease">Disease</option><option value="non-disease">Non-Disease</option></select></div>
+            <button type="submit">Update Details</button>
+        </form>
+        <div id="message-container"></div>
+        <div id="error-container" class="error-message"></div>
+    </div>
+
+    <div style="display: flex; gap: 10px;">
+        <button id="prevButton" style="display: none;">Previous</button>
+        <button id="nextButton" style="display: none;">Next</button>
+    </div>
+
+    <table class="data-table" style="display: none;">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Image Path</th>
+                <th>Mask Path</th>
+                <th>Doctor's Name</th>
+                <th>Rating</th>
+                <th>Comments</th>
+                <th>Mask Comments</th>
+                <th>Disease Name</th>
+                <th>Category</th>
+                <th>Created At</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody id="data-table-body">
+        </tbody>
+    </table>
+
+    <a href="/" class="home-button">Home</a>
+
+    <script>
+        const selectedDiseaseSelect = document.getElementById('selectedDisease');
+        const viewImagesButton = document.getElementById('viewImagesButton');
+        const imageContainer = document.querySelector('.image-container');
+        const targetImage = document.getElementById('targetImage');
+        const maskImage = document.getElementById('maskImage');
+        const imageDetailsForm = document.getElementById('imageDetailsForm');
+        const messageContainer = document.getElementById('message-container');
+        const errorContainer = document.getElementById('error-container');
+        const prevButton = document.getElementById('prevButton');
+        const nextButton = document.getElementById('nextButton');
+
+        const doctorNameInput = document.getElementById('doctor_name');
+        const ratingInput = document.getElementById('rating');
+        const commentsInput = document.getElementById('comments');
+        const maskCommentsInput = document.getElementById('mask_comments');
+        const diseaseNameInput = document.getElementById('disease_name');
+        const categorySelect = document.getElementById('category');
+        const imageIdInput = document.getElementById('imageId');
+
+        const dataTable = document.querySelector('.data-table');
+        const dataTableBody = document.getElementById('data-table-body');
+
+
+        const backendUrl = 'http://localhost:8000';
+        let diseaseNames = [];
+        let images = [];
+        let currentIndex = 0;
+        let selectedDisease = '';
+        let editingId = null;
+
+
+        function clearForm() {
+            imageIdInput.value = '';
+            doctorNameInput.value = '';
+            ratingInput.value = '';
+            commentsInput.value = '';
+            maskCommentsInput.value = '';
+            diseaseNameInput.value = '';
+            categorySelect.value = '';
+            errorContainer.textContent = '';
+            messageContainer.textContent = '';
+            editingId = null;
+        }
+
+        function displayImage(index) {
+            if (index < 0 || index >= images.length) {
+                return;
+            }
+
+            const image = images[index];
+            targetImage.src = `${backendUrl}/${image.image_path}`;
+            targetImage.alt = `Original Image ${image.image_path}`;
+            maskImage.src = `${backendUrl}/${image.mask_path}`;
+            maskImage.alt = `Mask Image ${image.mask_path}`;
+            populateForm(image);
+
+            imageContainer.style.display = 'flex';
+            imageDetailsForm.style.display = 'flex';
+            prevButton.style.display = index > 0 ? 'inline-block' : 'none';
+            nextButton.style.display = index < images.length - 1 ? 'inline-block' : 'none';
+
+            updateDataTable(images);
+        }
+
+        function populateForm(image) {
+            editingId = image.id;
+            imageIdInput.value = image.id;
+            doctorNameInput.value = image.doctor_name || '';
+            ratingInput.value = image.rating || '';
+            commentsInput.value = image.comments || '';
+            maskCommentsInput.value = image.mask_comments || '';
+            diseaseNameInput.value = image.disease_name || '';
+            categorySelect.value = image.category || '';
+        }
+
+        function updateDataTable(data) {
+            dataTableBody.innerHTML = '';
+            data.forEach(item => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${item.id}</td>
+                    <td>${item.image_path}</td>
+                    <td>${item.mask_path}</td>
+                    <td data-field="doctor_name" data-id="${item.id}">${item.doctor_name}</td>
+                    <td data-field="rating" data-id="${item.id}">${item.rating}</td>
+                    <td data-field="comments" data-id="${item.id}">${item.comments}</td>
+                    <td data-field="mask_comments" data-id="${item.id}">${item.mask_comments}</td>
+                    <td data-field="disease_name" data-id="${item.id}">${item.disease_name}</td>
+                    <td data-field="category" data-id="${item.id}">${item.category}</td>
+                    <td>${item.created_at}</td>
+                    <td><button class="edit-button" data-id="${item.id}">Edit</button></td>
+                `;
+                dataTableBody.appendChild(row);
+            });
+            dataTable.style.display = 'table';
+
+            const editButtons = document.querySelectorAll('.edit-button');
+            editButtons.forEach(button => {
+                button.addEventListener('click', () => {
+                    const id = button.dataset.id;
+                    editingId = id;
+                    const imageToEdit = images.find(img => img.id === parseInt(id));
+                    if (imageToEdit) {
+                        populateForm(imageToEdit);
+                        imageContainer.style.display = 'flex';
+                        imageDetailsForm.style.display = 'flex';
+                    }
+                });
+            });
+        }
+
+        function fetchAndDisplayImages(disease) {
+            fetch(`${backendUrl}/disease_images/${disease}`)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    images = data;
+                    currentIndex = 0;
+                    if (images.length > 0) {
+                        displayImage(currentIndex);
+                        messageContainer.textContent = `Displaying images for ${disease}`;
+                    } else {
+                        imageContainer.style.display = 'none';
+                        imageDetailsForm.style.display = 'none';
+                        prevButton.style.display = 'none';
+                        nextButton.style.display = 'none';
+                        messageContainer.textContent = `No images found for ${disease}`;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching images:', error);
+                    messageContainer.textContent = 'Failed to fetch images. Please check the console.';
+                    imageContainer.style.display = 'none';
+                    imageDetailsForm.style.display = 'none';
+                    prevButton.style.display = 'none';
+                    nextButton.style.display = 'none';
+
+                });
+        }
+
+
+
+        // Event Listeners
+        viewImagesButton.addEventListener('click', () => {
+            selectedDisease = selectedDiseaseSelect.value;
+            if (selectedDisease) {
+                fetchAndDisplayImages(selectedDisease);
+            } else {
+                alert('Please select a disease.');
+            }
+        });
+
+        prevButton.addEventListener('click', () => {
+            currentIndex--;
+            displayImage(currentIndex);
+        });
+
+        nextButton.addEventListener('click', () => {
+            currentIndex++;
+            displayImage(currentIndex);
+        });
+
+        imageDetailsForm.addEventListener('submit', (event) => {
+            event.preventDefault();
+
+            const formData = new FormData(imageDetailsForm);
+            const id = formData.get('imageId');
+            const doctorName = formData.get('doctor_name');
+            const rating = formData.get('rating');
+            const comments = formData.get('comments');
+            const maskComments = formData.get('mask_comments');
+            const diseaseName = formData.get('disease_name');
+            const category = formData.get('category');
+
+
+            fetch(`${backendUrl}/update_image_details/${id}`, {
+                method: 'POST',
+                body: formData,
+            })
+                .then(response => {
+                    if (!response.ok) {
+                        return response.json().then(err => {
+                            throw new Error(err.detail || 'Failed to update image details');
+                        });
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    messageContainer.textContent = data.message;
+                    errorContainer.textContent = '';
+                    images = images.map(img => {
+                        if (img.id === parseInt(id)) {
+                            return {
+                                ...img,
+                                doctor_name: doctorName,
+                                rating: rating,
+                                comments: comments,
+                                mask_comments: maskComments,
+                                disease_name: diseaseName,
+                                category: category,
+                            }
+                        }
+                        return img;
+                    });
+                    fetchAndDisplayImages(selectedDisease);
+                    clearForm();
+                })
+                .catch(error => {
+                    console.error('Error updating image details:', error);
+                    errorContainer.textContent = error.message;
+                    messageContainer.textContent = '';
+                });
+        });
+
+        // Initial population of disease dropdown
+        fetch(`${backendUrl}/disease_names/`)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                return response.json();
+            })
+            .then(data => {
+                diseaseNames = data;
+                diseaseNames.forEach(diseaseName => {
+                    const option = document.createElement('option');
+                    option.value = diseaseName;
+                    option.textContent = diseaseName;
+                    selectedDiseaseSelect.appendChild(option);
+                });
+            })
+            .catch(error => {
+                console.error('Error fetching disease names:', error);
+                messageContainer.textContent = 'Failed to load diseases. Please check the console.';
+            });
+    </script>
+</body>
+</html>
+
 </body>
 </html>
