--- a/frontend/main.html
+++ b/frontend/main.html
@@ -2799,7 +2799,7 @@
 </html> -->
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -3034,5 +3034,231 @@
             window.location.href = 'index.html';
         });
     </script>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unibo Doctors Validation App</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 20px;
+      background: linear-gradient(to bottom, #f8f8f8, #fafafa);
+      background-size: cover;
+      min-height: 100vh;
+      margin: 0;
+    }
+    h1 {
+      margin-bottom: 20px;
+      color: #b81c22;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.05);
+      text-align: center;
+    }
+    .menu-item {
+      padding: 15px 20px;
+      margin: 10px 0;
+      border-radius: 8px;
+      text-decoration: none;
+      color: #333;
+      background: linear-gradient(135deg, #eee, #f5f5f5);
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+      transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.3s ease;
+      width: 300px;
+      text-align: center;
+      display: block;
+      border: 1px solid #ddd;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    .menu-item:hover {
+      background: linear-gradient(135deg, #ddd, #efefef);
+      transform: translateY(-2px);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    .menu-item:active {
+      transform: translateY(0);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+      background: linear-gradient(135deg, #eee, #f5f5f5);
+    }
+    .image-container {
+      display: flex;
+      justify-content: center;
+      margin-top: 30px;
+      gap: 20px;
+      width: 100%;
+      flex-wrap: wrap;
+    }
+    .image-container img {
+      max-width: 300px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+      transition: transform 0.2s ease-in-out;
+    }
+    .image-container img:hover {
+      transform: scale(1.02);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    @media (max-width: 768px) {
+      .menu-item {
+        width: 95%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .image-container {
+        flex-direction: column;
+        align-items: center;
+      }
+      .image-container img {
+        max-width: 95%;
+      }
+    }
+
+    .unibo-team-table {
+      margin-top: 80px;
+      border-collapse: collapse;
+      width: 100%;
+      max-width: 800px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+    }
+
+    .unibo-team-table th, .unibo-team-table td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .unibo-team-table th {
+      background-color: #f5f5f5;
+      color: #333;
+    }
+
+    .unibo-team-table tbody tr:hover {
+      background-color: #f0f0f0;
+    }
+
+    .unibo-team-table caption {
+      margin-bottom: 10px;
+      font-weight: bold;
+      font-size: 1.1em;
+      color: #555;
+      text-align: center;
+    }
+
+    .unibo-team-table img {
+      max-width: 120px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+    }
+
+    .header-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 20px;
+      width: 100%;
+      text-align: center;
+    }
+
+    .header-container img {
+      margin-right: 0;
+      margin-bottom: 10px;
+      border-radius: 8px;
+      max-width: 300px;
+    }
+
+    .header-container h1 {
+      margin-bottom: 0;
+    }
+
+    .menu-container {
+      margin-left: auto;
+      margin-right: auto;
+      padding-left: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: fit-content;
+    }
+
+    .logout-button {
+      padding: 10px 20px;
+      background-color: #b81c22;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+      font-size: 16px;
+    }
+
+    .logout-button:hover {
+      background-color: #a7181e;
+    }
+
+    .logout-button:active {
+      background-color: #96151b;
+    }
+  </style>
+</head>
+<body>
+  <div class="header-container">
+    <img src="unibo.jpg" alt="University of Bologna">
+    <h1>Unibo Doctors Validation App</h1>
+  </div>
+
+  <div class="menu-container">
+    <a href="/disease_categories.html" class="menu-item">Disease Categories</a>
+    <a href="/doctors_registration.html" class="menu-item">Doctors Registration</a>
+    <a href="/view_edit_images.html" class="menu-item">View/Edit Images Details</a>
+    <a href="/categorize_images.html" class="menu-item">Categorize Images</a>
+    <a href="http://127.0.0.1:8000/skin_disease_image/export_excel" class="menu-item" download>Download Excel</a>
+    <a href="/filter_disease.html" class="menu-item">Show Disease</a>
+    <a href="/doctors.html" class="menu-item">Show Registered doctors</a>
+    <button id="logout-button" class="logout-button">Logout</button>
+  </div>
+
+  <table class="unibo-team-table">
+    <caption>Unibo Team</caption>
+    <tbody>
+      <tr>
+        <td><img src="Michela Milano.jpg" alt="Michela Milano"></td>
+        <td>Michela Milano, Professor University of Bologna</td>
+        <td><img src="Roberta Calegari.jpg" alt="Roberta Calegari"></td>
+        <td>Roberta Calegari, Professor University of Bologna</td>
+        <td><img src="AndreaBorghesi.jpg" alt="Andrea Borghesi"></td>
+        <td>Andrea Borghesi, Professor University of Bologna</td>
+      </tr>
+      <tr>
+        <td><img src="Ali Tariq Nagi.png" alt="Ali Tariq Nagi"></td>
+        <td>Ali Tariq Nagi, Postdoctoral Fellow University of Bologna</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <script>
+    if (sessionStorage.getItem('loggedIn') !== 'true') {
+      window.location.href = 'index.html';
+    }
+
+    const logoutButton = document.getElementById('logout-button');
+    logoutButton.addEventListener('click', () => {
+      sessionStorage.removeItem('loggedIn');
+      window.location.href = 'index.html';
+    });
+  </script>
 </body>
 </html>
