--- a/frontend/categorize_images.html
+++ b/frontend/categorize_images.html
@@ -354,7 +354,7 @@
     let doctorsList = [];
 
     function buildImageUrl(baseName, suffix = '') {
-      return `${backendUrl}/images/${baseName}${suffix}.jpg`;
+      return `${backendUrl}/images/categorized_images/${baseName}${suffix}.jpg`;
     }
 
     async function loadBaseNames() {
