--- a/frontend/main _bak_June.html
+++ b/frontend/main _bak_June.html
@@ -183,18 +183,12 @@
   <div class="menu-container">
     <a href="/frontend/doctors_registration.html" class="menu-item">Doctors Registration</a>
     <a href="/frontend/doctors.html" class="menu-item">Show Registered doctors</a>
-    <a href="/frontend/upload_data.html" class="menu-item">Upload Data</a>
-    <a href="/frontend/categorize_images.html" class="menu-item">Categorize Images</a>
     <a href="/frontend/view_edit_images.html" class="menu-item">View/Edit Images Details</a>
+    <a href="/frontend/categorize_images.html" class="menu-item">Categorize Images</a>
     <a href="/frontend/download_categorized_excel.html" class="menu-item">Download Initial Excel</a>
-    <a href="/frontend/categorized_images_crops_batch.html" class="menu-item">Categorize Images Crops</a>
-    <a href="/frontend/download_categorized_images_crops_batch.html" class="menu-item">Download Categorize Images Crops</a>
-    <a href="/frontend/doctor_skin_disease_crops_rating.html" class="menu-item">Skin Disease Crops Rating</a>
-    <a href="/frontend/doctor_skin_disease_crops_rating_download_excel.html" class="menu-item">Download Excel Skin Disease Crops Rating</a>
-    <a href="/frontend/crop_quality_rating.html" class="menu-item">Crop Quality Rating</a>
-    <a href="/frontend/crop_quality_rating_download_excel.html" class="menu-item">Download Excel Crop Quality Rating</a>
+    <a href="/frontend/classify_skin_disease_crops.html" class="menu-item">Classify Skin Disease Crops</a>
     <a href="/frontend/classify_skin_tone.html" class="menu-item">Classify Skin Tone</a>
-    <a href="/frontend/download_skin_disease_excel_classify_skin_tone.html" class="menu-item">Download Excel Classify Skin Tone</a>
+    <a href="/frontend/download_skin_disease_excel2.html" class="menu-item">Download Excel</a>    
     <button id="logout-button" class="logout-button">Logout</button>
   </div>
 
