--- a/frontend/doctor_skin_disease_crops_rating_download_excel.html
+++ b/frontend/doctor_skin_disease_crops_rating_download_excel.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Download Doctor Image Ratings (Excel from JSON)</h1>
+        <h1>Download Skin Disease Crops Rating in Excel File</h1>
         <button id="downloadExcelBtn">Download Excel File</button>
         <div id="statusMessage" class="message"></div>
     </div>
