--- a/frontend/crop_quality_rating_download_excel.html
+++ b/frontend/crop_quality_rating_download_excel.html
@@ -57,7 +57,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Download Single Image Ratings Data</h1>
+        <h1>Download Crops Quality Rating Data</h1>
         <button id="downloadExcelBtn">Download Excel File</button>
         <div id="statusMessage" class="message"></div>
     </div>
