--- a/frontend/crop_quality_rating_download_excel.html
+++ b/frontend/crop_quality_rating_download_excel.html
@@ -110,7 +110,7 @@
                 const a = document.createElement('a');
                 a.style.display = 'none';
                 a.href = url;
-                a.download = 'single_image_ratings.xlsx'; // New suggested filename
+                a.download = 'Crops_images_quality_ratings.xlsx'; // New suggested filename
                 document.body.appendChild(a);
                 a.click();
                 window.URL.revokeObjectURL(url);
