--- a/frontend/doctor_skin_disease_crops_rating_download_excel.html
+++ b/frontend/doctor_skin_disease_crops_rating_download_excel.html
@@ -116,7 +116,7 @@
                 const a = document.createElement('a');
                 a.style.display = 'none';
                 a.href = url;
-                a.download = 'crop_image_ratings.xlsx'; // Suggested filename for download
+                a.download = 'crop_image_data.xlsx'; // Suggested filename for download
                 document.body.appendChild(a);
                 a.click();
                 window.URL.revokeObjectURL(url); // Clean up the URL object
